--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 8 Legs are better than none
 subtitle:
 description:
-author: John Doe
+author: Yigal Weinstein
 language:
 timezone:
 
@@ -44,7 +44,7 @@ highlight:
   tab_replace:
 
 # Category & Tag
-default_category: uncategorized
+default_category: general
 category_map:
 tag_map:
 
@@ -63,7 +63,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-theme: landscape
+# theme: landscape
+theme: codeland
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
