--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hexo-generator-category": "^0.1.2",
     "hexo-generator-index": "^0.1.2",
     "hexo-generator-tag": "^0.1.1",
+    "hexo-livereload": "^0.1.0",
     "hexo-math": "^1.0.6",
     "hexo-renderer-ejs": "^0.1.0",
     "hexo-renderer-marked": "^0.2.4",
